Set up interim title image and setting up instructions

--- a/Website/index.html
+++ b/Website/index.html
@@ -2,12 +2,19 @@
 <html>
     <head>
         <title>UBCOnTIme</title>
+
+        <!--Links and References-->
+        <link rel="stylesheet" href = "Styles.css">
     </head>
 
     <body>
-        <h1>Hello World!</h1>
+            <img class = "title" src="ubcontimelogo.png"alt="UBCOnTime Logo">
 
+            <div class = "container">
+                <h2>Find your Timetable on your SSC, then click Download your schedule to your calendar software. Upload it here, then hit Submit.</h2>
+            </div>
 
+        <script src = "web_background.js"> </script>
     </body>
 
 </html>
