Background image set, css in progress

--- a/Website/index.html
+++ b/Website/index.html
@@ -4,11 +4,11 @@
         <title>UBCOnTIme</title>
 
         <!--Links and References-->
-        <link rel="stylesheet" href = "Styles.css">
+        <link rel="stylesheet" href = "styles.css">
     </head>
 
     <body>
-            <img class = "title" src="ubcontimelogo.png"alt="UBCOnTime Logo">
+            <img class = "title" src="images/ubcontimelogo.png"alt="UBCOnTime Logo">
 
             <div class = "container">
                 <h2>Find your Timetable on your SSC, then click Download your schedule to your calendar software. Upload it here, then hit Submit.</h2>
