Title is complete

--- a/Website/index.html
+++ b/Website/index.html
@@ -8,9 +8,10 @@
     </head>
 
     <body>
-            <img class = "title" src="images/ubcontimelogo.png"alt="UBCOnTime Logo">
+            <img class = "title" src="images/UBCOnTime Logo.png"alt="UBCOnTime Logo" width="1387" height="220">
 
             <div class = "container">
+                <br><br>
                 <h2>Find your Timetable on your SSC, then click Download your schedule to your calendar software. Upload it here, then hit Submit.</h2>
             </div>
 
