--- a/Website/index.html
+++ b/Website/index.html
@@ -11,8 +11,11 @@
             <img class = "title" src="images/UBCOnTime Logo.png"alt="UBCOnTime Logo" width="1387" height="220">
 
             <div class = "container">
-                <br><br>
+                <br> <br>
                 <h2>Find your Timetable on your SSC, then click Download your schedule to your calendar software. Upload it here, then hit Submit.</h2>
+
+                <br> <br>
+                <button class="upload-btn" id="upload-btn">Upload</button>
             </div>
 
         <script src = "web_background.js"> </script>
