Button almost finished

--- a/Website/index.html
+++ b/Website/index.html
@@ -15,7 +15,7 @@
                 <h2>Find your Timetable on your SSC, then click Download your schedule to your calendar software. Upload it here, then hit Submit.</h2>
 
                 <br> <br>
-                <button class="upload-btn" id="upload-btn">Upload</button>
+                <button class="button" id="button">Upload</button>
             </div>
 
         <script src = "web_background.js"> </script>
