--- a/Website/index.html
+++ b/Website/index.html
@@ -4,6 +4,7 @@
         <title>UBCOnTIme</title>
 
         <!--Links and References-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <link rel="stylesheet" href = "styles.css">
     </head>
 
@@ -15,10 +16,10 @@
                 <h2>Find your Timetable on your SSC, then click Download your schedule to your calendar software. Upload it here, then hit Submit.</h2>
 
                 <br> <br>
-                <button class="button" id="button">Upload</button>
-            </div>
+                <button type="button" class="btn btn-primary btn-lg">Large button</button>
 
-        <script src = "web_background.js"> </script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+            <script src = "web_background.js"> </script>
     </body>
 
 </html>
