--- a/Website/index.html
+++ b/Website/index.html
@@ -15,7 +15,7 @@
             <div class = "container">
                 <br> <br> <br> <br>
                 <button type="button" class="btn btn-primary btn-lg">
-                    <i class="fa fa-cloud-upload" aria-hidden="true"></i>  Upload
+                    <img class="cloud-icon" src="/Website/Images/cloud.png">
                 </button>
 
                 <br> <br> <br> <br>
