--- a/Website/results.html
+++ b/Website/results.html
@@ -17,5 +17,8 @@
             <h1>This is the Results page! Good job!</h1>
         </div>
 
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+        <script src = "web_background.js"> </script>
+
     </body>
 </html>
