changes instruction message

--- a/Website/index.html
+++ b/Website/index.html
@@ -12,18 +12,13 @@
     <body>
             <img class = "title" src="images/UBCOnTime Logo.png"alt="UBCOnTime Logo" width="1387" height="220">
             
-            <div class = "container">
-                <br> <br> <br> <br>
+            <div class = "content">
                 <button type="button" class="btn btn-primary btn-lg">
                     <img class="cloud-icon" src="/Website/Images/cloud.png">
                 </button>
-
-                <br> <br> <br> <br>
-                <h2>Find your Timetable on your SSC, then click Download your schedule to your calendar software. Upload it here, then hit Submit.</h2>
-
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-            <script src = "web_background.js"> </script>
-           
+                <h2>Find your Timetable on the SSC, then click 'Download your schedule' and upload.</h2>
+            </div>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>           
     </body>
 
 </html>
