--- a/Website/index.html
+++ b/Website/index.html
@@ -9,15 +9,15 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 
-    <body>
-            <img class = "title" src="images/UBCOnTime Logo.png"alt="UBCOnTime Logo" width="1387" height="220">
-            
+    <body>          
             <div class = "container">
+                <img class = "title" src="images/UBCOnTime Logo.png"alt="UBCOnTime Logo" width="1387" height="220">
                 <button type="button" class="btn btn-primary btn-lg">
                     <img class="cloud-icon" src="/Website/Images/cloud.png">
                 </button>
-                <h2>Find your Timetable on the SSC, then click 'Download your schedule' and upload.</h2>
+                <h2>Find your Timetable on the SSC, then click <b>'Download your schedule'</b> and upload it here.</h2>
             </div>
+            <p class="description">Our app makes sure that don't have to sprint between your UBC classes.</p>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>           
     </body>
 
