--- a/Website/index.html
+++ b/Website/index.html
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>UBCOnTIme</title>
 
-        <!--Links and References-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-        <link rel="stylesheet" href = "styles.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    </head>
+<head>
+    <title>UBCOnTIme</title>
 
-    <body>          
-            <div class = "container">
-                <img class = "title" src="images/UBCOnTime Logo.png"alt="UBCOnTime Logo" width="1387" height="220">
-                <button type="button" class="btn btn-primary btn-lg">
-                    <img class="cloud-icon" src="/Website/Images/cloud.png">
-                </button>
-                <h2>Find your Timetable on the SSC, then click <b>'Download your schedule'</b> and upload it here.</h2>
-            </div>
+    <!--Links and References-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+
+<body>
+
+    <div class="container">
+        <img class="title" src="images/UBCOnTime Logo.png" alt="UBCOnTime Logo" width="1387" height="220">
+
+        <input type="file" id="actual-btn" hidden />
+
+        <label for="actual-btn">
+                <img class="cloud-icon" src="/Website/Images/cloud.png">
+        </label>
+
+        <div class="text">
+            <h2>Find your Timetable on the SSC, then click <b>'Download your schedule'</b> and upload it here.</h2>
             <p class="description">Our app makes sure that don't have to sprint between your UBC classes.</p>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>           
-    </body>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
+
+</body>
 
 </html>
