--- a/Website/index.html
+++ b/Website/index.html
@@ -16,7 +16,10 @@
     <div class="container">
         <img class="title" src="images/UBCOnTime Logo.png" alt="UBCOnTime Logo" width="1387" height="220">
 
-        <input type="file" id="actual-btn" hidden />
+        <form id="form">
+            <input type="file" id="actual-btn" hidden/>
+        </form>
+       
 
         <label for="actual-btn">
                 <img class="cloud-icon" src="/Website/Images/cloud.png">
@@ -31,6 +34,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+    
+    <script src="index.js"> </script>
 
 </body>
 
