--- a/Website/results.html
+++ b/Website/results.html
@@ -13,12 +13,12 @@
 
         <img class = "title" src="images/UBCOnTime Logo.png"alt="UBCOnTime Logo" width="1387" height="220">
         <div class = "container">
-            <br> <br> <br> <br>
+            <br> <br>
             <h1>This is the Results page! Good job!</h1>
         </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-        <script src = "web_background.js"> </script>
+        <script src = "index.js"> </script>
 
     </body>
 </html>
