--- a/Website/results.html
+++ b/Website/results.html
@@ -7,14 +7,17 @@
     <!--Links and References-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="resultStyles.css">
+    <link rel="stylesheet" href="resultsStyles.css">
 </head>
 
 <body>
 
-    <img class="title" src="images/UBCOnTime Logo.png" alt="UBCOnTime Logo" width="1387" height="220">
     <div class="container">
-        <h1>This is the Results page! Good job!</h1>
+        <img class="title" src="images/UBCOnTime Logo.png" alt="UBCOnTime Logo" width="1387" height="220">
+
+        <div class="text">
+            <h1>This is the Results page! Good job!</h1>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
