results can now access the array of journeys backend is now completely connected to the frontend

--- a/Website/index.html
+++ b/Website/index.html
@@ -22,7 +22,7 @@
        
 
         <label for="actual-btn">
-                <img class="cloud-icon" src="/Website/Images/cloud.png">
+                <img class="cloud-icon" src="/Images/cloud.png">
         </label>
 
         <div class="text">
