--- a/Website/results.html
+++ b/Website/results.html
@@ -24,6 +24,7 @@
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
     <script src="web_background.js"> </script>
+    <script src="/results.js"></script>
 
 </body>
 
