--- a/Website/results.html
+++ b/Website/results.html
@@ -18,6 +18,10 @@
         <div class="text">
             <h1>This is the Results page! Good job!</h1>
         </div>
+
+        <div class="results" id="results">
+
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
